cp3-networkpolicy/egress/license-service-reporter/bedrock-egress-ibm-license-service-reporter-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-ibm-license-service-reporter-operator
  namespace: "lsrNamespace"
  labels:
    component: cpfs3
spec:
  egress:
  - {}
  podSelector:
    matchLabels:
      name: "ibm-license-service-reporter-operator"
  policyTypes:
  - Egress
