cp3-networkpolicy/egress/license-service-reporter/ibm-license-service-reporter-egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ibm-license-service-reporter-deny-all-egress
  namespace: ibm-licensing-namespace
spec:
  podSelector:
    matchLabels:
      app: ibm-license-service-reporter-instance
  policyTypes:
    - Egress
