cp3-networkpolicy/egress/license-service-reporter/ibm-license-service-reporter-operator-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ibm-license-service-reporter-operator-kubernetes-egress
  namespace: ibm-licensing-namespace
spec:
  egress:
    - ports:
      - protocol: TCP
        port: 443
      - protocol: TCP
        port: 6443
      to:
        - podSelector:
            matchLabels:
              apiserver: 'true'
          namespaceSelector: {}
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      - port: 5353
        protocol: UDP
      - port: 5353
        protocol: TCP
      to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            dns.operator.openshift.io/daemonset-dns: default
  podSelector:
    matchLabels:
      name: ibm-license-service-reporter-operator
  policyTypes:
  - Egress
